--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Instagram</title>
 </head>
 <body>
     <div class="instagram-wrapper">
-        <div class="insta-phone">
-            <img src="img/feed.png" alt="Feed no celular" class="phone">
+        <div class="instagram-phone">
+            <img src="./img/feed.png" alt="celular">
         </div>
-        <div class="insta-login">
-            <img src="img/logo.png" alt="Logo" class="insta-logo">
-            <img src="img/profile.png" alt="Profile" class="profile-photo">
-            <a href="#">Continuar como davisfs.21</a>
-            <a href="#">Remover conta</a>
-        </div>
-        <div class="other">
-            <p class="other-account">Não é davisfs.21?</p>
-            <p class="other-account">
-                <span class="blue-link">Trocar de contas</span>
-                ou 
-                <span class="blue-link">cadastrar-se</span>
-            </p>
-        </div>
-        <div class="insta-links">
-            Obtenha o aplicativo.
-            <div class="downloads">
-                <a href="#"><img src="img/get-on-play-store.png" alt=""></a>
-                <a href="#"><img src="img/get-on-app-store.png" alt=""></a>
+        <div class="instagram-continue">
+            <div class="group">
+                <img src="./img/logo.png" class="instagram-logo" alt="instagram logo">
+                <div class="profile-photo">
+                    <img src="./img/profile.png" alt="foto de perfil">
+                </div>
+                <a href="#" class="instagram-login">Continue como davisfs.21</a>
+                <a href="#" class="instagram-logout">Remover conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é davisfs.21?</p>
+                <p class="not-account">
+                    <span class="link-blue">Alternar contas</span>
+                    ou
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
             </div>
         </div>
     </div>
